# autoresearch

./: .gitignore  README.md  analysis.ipynb  bench-investigate.gpu.csv  prepare.py  program.md  pyproject.toml  pytest.ini  test_mfu.py  train.py  verify_flash_attn.py  verify_optimizer.py
.claude/: settings.local.json
.githooks/: pre-push
autoresearch_trainer/: __init__.py  analyzer.py  compile.py  config.py  model.py  mutator.py  optimizer.py  orchestrator.py  runner.py  token_cache.py  train_session.py
autoresearch_trainer/utils/: platform.py
benchmarks/: KEY_FINDINGS.md
conductor/: product.md  tech-stack.md  tracks.md
conductor/archive/auto_research_20260316/: spec.md
conductor/tracks/auto_research_20260316/: plan.md
conductor/tracks/opt_val_bpb_20260316/: metadata.json  plan.md  spec.md
conductor/tracks/pull_remote_changes_20260316/: index.md  metadata.json  plan.md  spec.md
docs/: README.md  windows_flash_attention.md
docs/findings/: README.md  benchmark-findings.md  benchmark-summary-2026-03-15.md
docs/history/: README.md
docs/history/benchmarks/: README.md
docs/history/benchmarks/archive/: benchmark_max_autotune_100.txt  benchmark_max_autotune_no_cudagraphs_100.txt  compare_default_batch12_100.txt  compare_max_autotune_batch12_100.txt  refine_default_batch_10.txt  refine_default_batch_12.txt  (+10 more)
docs/history/conductor/: README.md
docs/runbooks/: README.md  product-guidelines.md  product.md  tech-stack.md  windows_flash_attention.md
entrypoints/: __init__.py  prepare.py  train.py
scripts/: check_push_artifacts.py  demonstrate_success.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py
tests/: test_analyzer.py  test_compile.py  test_config.py  test_model.py  test_mutator.py  test_optimizer.py  test_orchestrator.py  test_platform.py  test_runner_loop.py  test_token_cache.py  test_train_session.py  test_verify_flash_attn.py
tests/scripts/: test_check_push_artifacts.py
(+4 files in other folders)
